Mostly CSS changes
- Styled active state of navigation bar when used with scrollspy.
- Changed offset for scrollspy
- Styled placeholder text for contact form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 
   </head>
-  <body data-spy="scroll" data-target="#navbar-collapse-1" data-offset="51">
+  <body data-spy="scroll" data-target="#navbar-collapse-1" data-offset="52">
 
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
@@ -35,7 +35,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse-1">  
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#home">Home</a></li>
+            <li class="active"><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
