--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet">
     <!--  Font Families -->
-		<link href='https://fonts.googleapis.com/css?family=Indie+Flower|Martel' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Martel|Asul' rel='stylesheet' type='text/css'>
      <!-- Font Awesome  -->
     <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 
@@ -50,7 +50,7 @@
           <h1>Front-end Development</h1>
           <hr>
           <h1>Shair Mir</h1>
-          <div class="col-md-12 col-sm-1">
+          <div class="col-md-12">
             <ul class="list-unstyled list-group list-inline">
               <li><a class="btn btn-warning" href="https://twitter.com/Shair89" target="_blank"><i class="fa fa-twitter"></i>Twitter</a></li>
               <li><a class="btn btn-warning" href="https://github.com/ShairMir" target="_blank"><i class="fa fa-github"></i>Github</a></li>
@@ -67,12 +67,10 @@
         <div class="row">
           <div class="col-lg-6 text-center">
             <h1>Who am I?</h1>
-            <p>I'm a self taught programmer from Rotterdam.<br>
-            Gummi bears biscuit topping sweet roll muffin cotton candy pastry biscuit gingerbread. Pudding danish candy canes. Cake carrot cake sweet. Tootsie roll chocolate bar topping dessert pastry cake liquorice.
+            <p>Lorem ipsum dolor sit amet, sea ex scripta voluptatibus, paulo regione at eam. Vel ad falli convenire, enim laudem oporteat nam et. Rebum malorum vel ex. Ex regione deleniti qui. Sit deleniti electram postulant ei, feugiat legimus deterruisset ut has, cu etiam semper omittantur nec.
 
             <br>  
-            Lemon drops candy canes powder bonbon marzipan sugar plum toffee cupcake. Pie sweet roll tart sweet roll halvah. Cupcake pastry soufflé marshmallow donut dessert gummi bears lemon drops. Gummi bears topping dragée brownie cake halvah cookie jelly beans.
-            Macaroon danish gummi bears chocolate cotton candy halvah. Wafer lollipop caramels. Toffee jelly cake donut lemon drops cupcake pie. Chocolate bar cookie chupa chups candy canes bonbon
+            Lorem ipsum dolor sit amet, sea ex scripta voluptatibus, paulo regione at eam. Vel ad falli convenire, enim laudem oporteat nam et. Rebum malorum vel ex. Ex regione deleniti qui. Sit deleniti electram postulant ei, feugiat legimus deterruisset ut has, cu etiam semper omittantur nec.rum vel ex. Ex regione deleniti qui. Sit deleniti electram postulant ei, feugiat legimus deterruisset ut has, cu etiam semper omittantur nec.
             </p>
           </div>
           <div class="col-lg-6 profile_picture">
@@ -172,10 +170,10 @@
         
         <div class="row text-center">
           <h1>Let's stay in touch</h1>
-          <div class="col-lg-3 col-lg-offset-3">
+          <div class="col-md-3 col-lg-offset-3">
             <i class="fa fa-envelope fa-lg"></i><a href="mailto:s.mir89@hotmail.com">s.mir89@hotmail.com</a>
           </div>
-          <div class="col-lg-3">
+          <div class="col-md-3">
             <i class="fa fa-phone fa-lg"></i> <a href="tel:0624375982">+31-624375982</a>
           </div>  
         </div>
