Thumbnails and forms styling
- styled the forms with hover and styled placeholder text
- styled thumbnails with hover

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             </p>
           </div>
           <div class="col-lg-6 profile_picture">
-            <img src="images/img_shair.png" alt="picture of Shair Mir" class="img-responsive center-block img-circle">
+            <!-- <img src="https://pbs.twimg.com/profile_images/655858591283458050/kgiivrOB.png" alt="img" class="img-responsive center-block img-circle"> -->
+            <img src="images/img_shair.png" alt="img" class="img-responsive center-block img-circle">
           </div>
         </div>
       </div><!-- /.container -->
@@ -111,7 +112,7 @@
             </div>
           </div>
         </div><!-- /.row -->
-
+        
         <div class="row">
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
