--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="thumbnail">
               <img src="http://placehold.it/350x200" alt="">
               <div class="caption text-center">
-                <h3>Under Construction</h3>
+                <h3>Project Under Construction</h3>
                 <p>pat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut</p>
               </div>
             </div>
