--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
         <div class="row">
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <img src="http://placehold.it/350x200" alt="">
+              <a href="http://codepen.io/ShairMir/full/jbpBoJ/" target="_blank">
+                <img src="images/GoT_RandomQuote.jpg" alt="Project picture">
+              </a>
               <div class="caption text-center">
-                <h3>Project Under Construction</h3>
-                <p>pat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut</p>
+                <h3>Random Quote Machine</h3>
+                <p>Game of Thrones themed random quote machine.<br>Bootstrap/Javascript/jQuery</p>
               </div>
             </div>
           </div>
