--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <img src="http://placehold.it/350x200" alt="">
+              <a href="#" target="_blank">
+                <img src="http://placehold.it/350x200" alt="">
+              </a>
               <div class="caption text-center">
                 <h3>Thumbnail Label</h3>
                 <p>pat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut</p>
@@ -106,7 +108,9 @@
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <img src="http://placehold.it/350x200" alt="">
+              <a href="#" target="_blank">
+                <img src="http://placehold.it/350x200" alt="">
+              </a>
               <div class="caption text-center">
                 <h3>Thumbnail Label</h3>
                 <p>pat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut</p>
@@ -118,7 +122,9 @@
         <div class="row">
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <img src="http://placehold.it/350x200" alt="">
+              <a href="#" target="_blank">
+                <img src="http://placehold.it/350x200" alt="">
+              </a>
               <div class="caption text-center">
                 <h3>Thumbnail Label</h3>
                 <p>pat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut</p>
@@ -127,7 +133,9 @@
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <img src="http://placehold.it/350x200" alt="">
+              <a href="#" target="_blank">
+                <img src="http://placehold.it/350x200" alt="">
+              </a>
               <div class="caption text-center">
                 <h3>Thumbnail Label</h3>
                 <p>pat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut</p>
@@ -136,7 +144,9 @@
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <img src="http://placehold.it/350x200" alt="">
+              <a href="#" target="_blank">
+                <img src="http://placehold.it/350x200" alt="">
+              </a>
               <div class="caption text-center">
                 <h3>Thumbnail Label</h3>
                 <p>pat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut</p>
